objects/Purchase_Requisition__c.object
<CustomObject>
    <fields>
        <fullName>Details__c</fullName>
        <label>Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Estimated_Cost__c</fullName>
        <label>Estimated Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Milestone1_Project__c</referenceTo>
        <relationshipLabel>Purchase Requisitions</relationshipLabel>
        <relationshipName>Purchase_Requisitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requested_Product__c</fullName>
        <label>Requested Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sourcing_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sourcing Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Purchase Requisitions</relationshipLabel>
        <relationshipName>Purchase_Requisitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>In-Review</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Purchase Requisition</label>
    <nameField>
        <displayFormat>PR-{0000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Requisitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>